# portails4

./: .clang-format  LICENSE.md  README.md  bximsg.c  bximsg.h  bximsg_wthr.c  bximsg_wthr.h  bxipkt.h  bxipkt_common.c  bxipkt_udp.c  meson.build  pool.c  pool.h  ptl_getenv.h  ptl_log.c  ptl_log.h  ptl_str.c  swptl.c  swptl.h  timo.c  timo.h  utils.c  utils.h
examples/: README.md  get_id.c  get_matching.sh  hello.sh  init_queue.c  meson.build  ping_pong.c  put_to_self.c  put_to_self_logical.c  reduce.c  search.c
examples/get_matching/: client.c  get_me.h  meson.build  server.c
examples/get_me/: client.c  get_me.h  meson.build  server.c
examples/hello/: client.c  hello.h  meson.build  server.c
examples/ping_pong/: meson.build  ping.c  pong.c
include/: swptl4.h  swptl4_transport.h
portals/: meson.build  portals.c
portals/include/: portals4.h  portals4_bxiext.h  portals4_ext.h
swptl/: bximsg.c  bximsg.h  bximsg_wthr.c  bximsg_wthr.h  bxipkt.h  bxipkt_common.c  bxipkt_udp.c  meson.build  pool.c  pool.h  ptl_getenv.h  ptl_log.c  ptl_log.h  ptl_str.c  swptl.c  swptl.h  utils.h
swptl/include/: swptl4.h  swptl4_transport.h
tests/: verifclient1.txt  verifclient2.txt  verifserver1.txt  verifserver2.txt
