subdir('hello')

subdir('get_matching')

executable('init_queue', 'init_queue.c', dependencies: portals_dep)

executable('put_to_self', 'put_to_self.c', dependencies: portals_dep)

executable('search', 'search.c', dependencies: portals_dep)

executable(
  'put_to_self_logical',
  'put_to_self_logical.c',
  dependencies: portals_dep,
)

executable('get_id', 'get_id.c', dependencies: portals_dep)

executable('ping_pong', 'ping_pong.c', dependencies: portals_dep)
